Removed uses of Map.of and List.of for java8 compatibility